<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.Light"
    android:background="@color/sporty_light_grey_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sporty_light_grey_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStartWithNavigation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_logo_dashboard"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_logo_2_round"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <TextView
                    android:id="@+id/tv_app_name_dashboard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="IMAGERY"
                    android:textColor="@color/u_navy"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/db_logout_btn"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_logo_dashboard"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/db_logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@color/sporty_danger_red"
                    android:backgroundTint="@color/sporty_accent_orange"
                    android:text="Keluar"
                    android:textColor="@color/sporty_text_on_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Selamat Datang, \n Atlet-Pelajar!"
                android:textColor="@color/sporty_text_dark"
                android:textSize="23dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/db_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Dashboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_dashboard" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="12dp"
                android:outlineAmbientShadowColor="@color/black"
                android:background="@color/sporty_light_grey_bg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_about"
                        android:textSize="14dp"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/db_btn_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/u_navy"
                        android:paddingVertical="12dp"
                        android:text="@string/dasboard_about_btn"
                        android:textSize="14dp"
                        android:textColor="@color/sporty_text_on_dark"
                        app:cornerRadius="8dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:background="@color/sporty_light_grey_bg"
                android:layout_marginBottom="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:foreground="@mipmap/logo_materi_1_foreground" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dashboard_materi_1_title"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/u_navy"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_materi_1_desc"
                        android:textSize="14dp"
                        android:layout_marginBottom="20dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/db_btn_materi1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/u_navy"
                        android:text="Mulai Sesi Mental Toughness"
                        android:textColor="@color/sporty_text_on_dark"
                        android:textSize="16dp"
                        app:cornerRadius="8dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:background="@color/sporty_light_grey_bg"
                android:layout_marginBottom="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:foreground="@mipmap/logo_materi_2_foreground" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dashboard_materi_2_title"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/u_navy"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_materi_2_desc"
                        android:textSize="14dp"
                        android:layout_marginBottom="20dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/db_btn_materi2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/u_navy"
                        android:text="Mulai Sesi Sport Ability"
                        android:textColor="@color/sporty_text_on_dark"
                        android:textSize="16dp"
                        app:cornerRadius="8dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>